# contact-finder

./: .env.example  Dockerfile  pyproject.toml  quick_test.py  test_llm.py
accounts/: admin.py  api.py  backends.py  models.py  serializers.py  urls.py
accounts/migrations/: 0001_initial.py
accounts/tests/: test_profile.py
common/: admin.py  api.py  serializers.py  unfold.py
common/scripts/: clean_migrations.ps1
contactfinder/: admin.py  apps.py  models.py  serializers.py  urls.py
contactfinder/agents/: __init__.py  gemini_agent.py  gpt_serper_agent.py
contactfinder/api/: __init__.py  finder.py
contactfinder/migrations/: 0001_initial.py  0002_alter_company_email_patterns.py
contactfinder/models/: __init__.py  cache.py
contactfinder/prompts/: __init__.py  advanced_prompts.py
contactfinder/services/: __init__.py  cache.py  finder.py  validation.py
core/: settings.py  urls.py
pipeline/: admin.py  api.py  apps.py  models.py  serializers.py  urls.py
pipeline/migrations/: 0001_initial.py  0002_discoveredemployee.py
pipeline/services/: company_discovery.py  confidence.py  discovery.py  employee_discovery.py  prompts.py  validator.py
pipeline/services/domain/: base.py  gemini.py  rocketreach.py
pipeline/services/employee/: __init__.py  base.py  gemini.py
pipeline/services/pattern/: base.py  gemini.py
pipeline/services/validation/: __init__.py  domain.py
